--- a/Clash-Full-E.ini
+++ b/Clash-Full-E.ini
@@ -52,6 +52,7 @@ custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有-手动`[]所有-自动
 custom_proxy_group=所有-手动`select`.*
 custom_proxy_group=美国-手动`select`.*
 custom_proxy_group=香港-手动`select`.*
+custom_proxy_group=香港-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`180,5,100
 custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`180,5,100
 
 ;4、启用规则集
