--- a/Clash-Full-E.ini
+++ b/Clash-Full-E.ini
@@ -153,18 +153,15 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
-custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
-custom_proxy_group=🇺🇲 美国节点`select`(美|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|(?<![a-zA-Z])US(?![a-zA-Z])|(?<![a-zA-Z])USA(?![a-zA-Z])|(?<![a-zA-Z])USD(?![a-zA-Z]))
-custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=🇸🇬 新加坡节点`select`(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|KOR|首尔|韩|韓)
-custom_proxy_group=🇭🇰 香港节点-自动`url-test`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:港|香港|HongKong|HK|Hong Kong)).*$)`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=🇯🇵 日本节点-自动`url-test`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)).*$)`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=🇺🇲 美国节点-自动`url-test`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:美|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|(?<![a-zA-Z])US(?![a-zA-Z])|(?<![a-zA-Z])USA(?![a-zA-Z])|(?<![a-zA-Z])USD(?![a-zA-Z]))).*$)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾节点-自动`url-test`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:台|新北|彰化|TW|Taiwan)).*$)`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=🇸🇬 新加坡节点-自动`url-test`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:新加坡|坡|狮城|SG|Singapore)).*$)`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=🇰🇷 韩国节点-自动`url-test`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:KR|Korea|KOR|首尔|韩|韓)).*$)`http://www.gstatic.com/generate_204`300,100
+custom_proxy_group=🇭🇰 香港节点`select`(104.245.43.241|45.78.28.108|45.78.23.97|45.78.31.8|45.78.21.46)
+custom_proxy_group=🇯🇵 日本节点`select`(212.50.250.247)
+custom_proxy_group=🇳🇱 荷兰节点`select`(162.248.79.10)
+custom_proxy_group=🇺🇲 美国节点`select`(45.62.103.185|104.225.158.125|104.225.151.204|198.181.36.130|45.62.110.168)
+custom_proxy_group=🇭🇰 香港节点-自动`url-test`(104.245.43.241|45.78.28.108|45.78.23.97|45.78.31.8|45.78.21.46)`http://www.gstatic.com/generate_204`300,100
+custom_proxy_group=🇯🇵 日本节点-自动`url-test`(212.50.250.247)`http://www.gstatic.com/generate_204`300,100
+custom_proxy_group=🇳🇱 荷兰节点-自动`url-test`(162.248.79.10)`http://www.gstatic.com/generate_204`300,100
+custom_proxy_group=🇺🇲 美国节点-自动`url-test`(45.62.103.185|104.225.158.125|104.225.151.204|198.181.36.130|45.62.110.168)`http://www.gstatic.com/generate_204`300,,150
+
 
 ;4、启用规则集
 enable_rule_generator=true
