--- a/Clash-Full-E.ini
+++ b/Clash-Full-E.ini
@@ -103,51 +103,46 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]DIRECT`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
 custom_proxy_group=🚀 手动切换`select`.*
-;custom_proxy_group=♻️ 自动选择`url-test`((^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:港|香港|HongKong|HK|Hong Kong|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|美|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|(?<![a-zA-Z])US(?![a-zA-Z])|(?<![a-zA-Z])USA(?![a-zA-Z])|(?<![a-zA-Z])USD(?![a-zA-Z])|KR|Korea|KOR|首尔|韩|韓)).*$))`http://www.gstatic.com/generate_204`300,100
 custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*x(?:[2-9]|[1-9][0-9])))`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🚀 手动切换
-custom_proxy_group=✨ AI1`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🚀 手动切换
-custom_proxy_group=✨ AI2`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🚀 手动切换
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🚀 手动切换
-custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点
-custom_proxy_group=🔍 Google`select`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点
-custom_proxy_group=🌟 Gemini`select`[]🇺🇲 美国节点-自动`🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动
-custom_proxy_group=📽️ AppleTV+`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点
-custom_proxy_group=🎼 Spotify`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点-自动`[]🚀 手动切换
-custom_proxy_group=🤖 OpenAI`select`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点
-custom_proxy_group=🐋 DeepSeek`select`[]DIRECT`[]🇺🇲 美国节点-自动`[]🇨🇳 台湾节点-自动`[]🇭🇰 香港节点-自动
-custom_proxy_group=🤖 Anthropic`select`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动
-custom_proxy_group=📈 IBKR`select`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动
-custom_proxy_group=₿ Binance`select`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`.*
-custom_proxy_group=👛 Wallet`select`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动
-custom_proxy_group=🤖 DeepL`select`[]🇺🇲 美国节点-自动`[]DIRECT`.*
-custom_proxy_group=☁️ CloudFlare`select`[]DIRECT`[]🇨🇳 台湾节点-自动`[]🇭🇰 香港节点-自动
-custom_proxy_group=🎵 TikTok`select`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动
-custom_proxy_group=🎥 Netflix`select`[]🇸🇬 新加坡节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 手动切换
-custom_proxy_group=🎥 Disney+`select`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点
-custom_proxy_group=🎥 PrimeVideo`select`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点
-custom_proxy_group=🐙 Github`select`🚀 节点选择`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动
-custom_proxy_group=🐦 Twitter`select`🚀 节点选择`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动
-custom_proxy_group=🎈 Line`select`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动
-custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点-自动`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🍑 DMMCOJP`select`[]🇯🇵 日本节点-自动`[]🇯🇵 日本节点
-custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇨🇳 台湾节点-自动`[]🇭🇰 香港节点-自动
-custom_proxy_group=🌪 Gitlab`select`[]DIRECT`[]🇨🇳 台湾节点-自动`[]🇭🇰 香港节点-自动
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇸🇬 新加坡节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇸🇬 新加坡节点-自动`[]🇯🇵 日本节点-自动`[]🚀 手动切换
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点
-custom_proxy_group=🎮 Nintendo`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点
-custom_proxy_group=📰 微博`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🚀 手动切换
-custom_proxy_group=💬 微信`select`[]DIRECT`[]REJECT`[]🚀 手动切换
-custom_proxy_group=🍠 小红书`select`[]DIRECT`[]REJECT`[]🚀 手动切换
-custom_proxy_group=🕺 字节跳动`select`[]DIRECT`[]REJECT`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=✨ AI1`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=✨ AI2`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🔍 Google`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🌟 Gemini`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=📽️ AppleTV+`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🎼 Spotify`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🤖 OpenAI`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🐋 DeepSeek`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🤖 Anthropic`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🤖 DeepL`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=☁️ CloudFlare`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🎥 Disney+`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🎥 PrimeVideo`selec`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🐙 Github`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🐦 Twitter`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🎈 Line`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=📺 巴哈姆特`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🍑 DMMCOJP`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=📺 Bilibili`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🌪 Gitlab`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🎮 Nintendo`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=📰 微博`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=💬 微信`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🍠 小红书`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
+custom_proxy_group=🕺 字节跳动`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇳🇱 荷兰节点-自动
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
