--- a/Clash-Ethan-Jms.ini
+++ b/Clash-Ethan-Jms.ini
@@ -48,29 +48,29 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`[]REJECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🚀 手动切换
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软Bing`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
+custom_proxy_group=💬 Ai平台`select`.*
+custom_proxy_group=📲 电报消息`select`.*
+custom_proxy_group=📹 油管视频`select`.*
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连
+custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软Bing`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港节点`url-test`[][SS] JMS-1084446@c717s1.portablesubmarines.com:5698`[][SS] JMS-1084446@c717s2.portablesubmarines.com:5698`[][VMess] JMS-1084446@c717s3.portablesubmarines.com:5698`[][VMess] JMS-1084446@c717s4.portablesubmarines.com:5698`[][VMess] JMS-1084446@c717s5.portablesubmarines.com`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`[][VMess] JMS-1217482@c89s4.portablesubmarines.com:16137`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`[][VMess] JMS-1084446@c717s801.portablesubmarines.com:5698`[][SS] JMS-1217482@c89s1.portablesubmarines.com:16137`[][SS] JMS-1217482@c89s2.portablesubmarines.com:16137`[][VMess] JMS-1217482@c89s3.portablesubmarines.com:16137`[][VMess] JMS-1217482@c89s801.portablesubmarines.com:16137`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇳🇱 荷兰节点`url-test`[][VMess] JMS-1217482@c89s5.portablesubmarines.com:16137`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
+;custom_proxy_group=🇭🇰 香港节点`url-test`[][SS] JMS-1084446@c717s1.portablesubmarines.com:5698`[][SS] JMS-1084446@c717s2.portablesubmarines.com:5698`[][VMess] JMS-1084446@c717s3.portablesubmarines.com:5698`[][VMess] JMS-1084446@c717s4.portablesubmarines.com:5698`[][VMess] JMS-1084446@c717s5.portablesubmarines.com`http://www.gstatic.com/generate_204`300,,50
+;custom_proxy_group=🇯🇵 日本节点`url-test`[][VMess] JMS-1217482@c89s4.portablesubmarines.com:16137`http://www.gstatic.com/generate_204`300,,50
+;custom_proxy_group=🇺🇲 美国节点`url-test`[][VMess] JMS-1084446@c717s801.portablesubmarines.com:5698`[][SS] JMS-1217482@c89s1.portablesubmarines.com:16137`[][SS] JMS-1217482@c89s2.portablesubmarines.com:16137`[][VMess] JMS-1217482@c89s3.portablesubmarines.com:16137`[][VMess] JMS-1217482@c89s801.portablesubmarines.com:16137`http://www.gstatic.com/generate_204`300,,150
+;custom_proxy_group=🇳🇱 荷兰节点`url-test`[][VMess] JMS-1217482@c89s5.portablesubmarines.com:16137`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
