--- a/Clash-Ethan-Jms.ini
+++ b/Clash-Ethan-Jms.ini
@@ -68,7 +68,7 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🇭🇰 香港节点`url-test`(c717s1|c717s2|c717s3|c717s4|c717s5)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(c89s4)http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(c89s4)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(JMS-1084446@c717s801|JMS-1217482@c89s1|JMS-1217482@c89s2|JMS-1217482@c89s3|JMS-1217482@c89s801)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇳🇱 荷兰节点`url-test`(c89s5)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
