--- a/Clash-Ethan-Jms.ini
+++ b/Clash-Ethan-Jms.ini
@@ -48,13 +48,12 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`[]REJECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=💬 Ai平台`select`.*
-custom_proxy_group=📲 电报消息`select`.*
-custom_proxy_group=📹 油管视频`select`.*
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连
+custom_proxy_group=💬 Ai平台`select`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
+custom_proxy_group=📲 电报消息`select`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
+custom_proxy_group=📹 油管视频`select`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
 custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换
