--- a/Clash-Ethan-Jms.ini
+++ b/Clash-Ethan-Jms.ini
@@ -26,24 +26,24 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=💬 Ai平台`select`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
 custom_proxy_group=📲 电报消息`select`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
 custom_proxy_group=📹 油管视频`select`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
-custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
 custom_proxy_group=Ⓜ️ 微软Bing`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇯🇵 日本节点
 custom_proxy_group=🇭🇰 香港节点`url-test`(c717s1|c717s2|c717s3|c717s4|c717s5)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(c717s801|c89s1|c89s2|c89s3|c89s801)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(c89s4)`http://www.gstatic.com/generate_204`300,,50
